[package]
name = "vrellis-core"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/ascii-art"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
image = "0.23"
itertools = "0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]

[features]
default = []