[package]
name = "vrellis-web"
publish = false
version = "1.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/vrellis"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
image = "0.23"
vrellis-core = {version = "0.1", path = "../vrellis-core" }
yew = "0.17"
anyhow = "1.0"